<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phase2_1.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/easyJob"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobs"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/des_milliers_d_opportinuit_s_au_bout_de_vos_doigts"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/txtUsernameR"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/field"
                android:drawableLeft="@drawable/user_image"
                android:drawablePadding="10dp"
                android:hint="@string/identifiant"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/txtPasswordR"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/field"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUsernameR" />

            <EditText
                android:id="@+id/txtEmailR"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/field"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="26dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPasswordR" />

            <Button
                android:id="@+id/btnSignUpR"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/inscriptbutton"
                android:text="@string/s_inscrire"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@+id/txtEmailR"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="43dp"
                android:text="@string/d_j_un_compte"
                android:textColor="@android:color/background_light"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUpR"
                android:layout_marginLeft="56dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/textView5" />

            <Button
                android:id="@+id/btnConnectR"
                android:layout_width="136dp"
                android:layout_height="25dp"
                android:layout_marginTop="41dp"
                android:background="@drawable/transparence"
                android:text="@string/connectez_vous"
                android:textAllCaps="false"
                android:textColor="#3498db"

                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUpR"
                android:layout_marginRight="25dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textView5"
                android:layout_marginLeft="8dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
